--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,16 @@
         "psr/log": "~1.0",
         "guzzlehttp/guzzle": "~4.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "4.1.*",
+        "squizlabs/php_codesniffer": "1.*",
+        "phploc/phploc": "*",
+        "pdepend/pdepend" : "1.1.0",
+        "phpmd/phpmd" : "1.4.*",
+        "sebastian/phpcpd": "*",
+        "theseer/phpdox": "0.6.*",
+        "mayflower/php-codebrowser": "~1.1"
+    },
     "autoload": {
         "psr-4": { "Dawen\\Component\\Elastic\\": "src/" }
     },
@@ -26,5 +36,8 @@
         }
     },
     "target-dir": "Dawen/Component/Elastic",
+    "config": {
+        "bin-dir": "bin"
+    },
     "minimum-stability": "dev"
 }
