--- a/composer.json
+++ b/composer.json
@@ -9,23 +9,28 @@
         {
             "name": "Daniel Wendlandt",
             "email": "dan.wendlandt@gmail.com"
+        },
+        {
+            "name": "Mario Mueller",
+            "email": "mario@xenji.com"
         }
     ],
     "require": {
-        "php": ">=5.3.3",
+        "php": ">=5.4.10",
         "symfony/event-dispatcher": "~2.1",
         "psr/log": "~1.0",
         "guzzlehttp/guzzle": "~4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.1.*",
-        "squizlabs/php_codesniffer": "1.*",
-        "phploc/phploc": "*",
-        "pdepend/pdepend" : "1.1.0",
-        "phpmd/phpmd" : "1.4.*",
-        "sebastian/phpcpd": "*",
-        "theseer/phpdox": "0.6.*",
-        "mayflower/php-codebrowser": "~1.1"
+        "phpunit/phpunit": "~4.1",
+        "squizlabs/php_codesniffer": "~2.0.0RC1",
+        "phploc/phploc": "~2.0",
+        "pdepend/pdepend" : "~1.1",
+        "phpmd/phpmd" : "~1.4",
+        "sebastian/phpcpd": "~2.0",
+        "theseer/phpdox": "~0.6",
+        "mayflower/php-codebrowser": "~1.1",
+        "munkie/elasticsearch-thrift-php": "~1.4"
     },
     "autoload": {
         "psr-4": { "Dawen\\Component\\Elastic\\": "src/" }
@@ -39,5 +44,10 @@
     "config": {
         "bin-dir": "bin"
     },
-    "minimum-stability": "dev"
+
+    "minimum-stability": "stable",
+
+    "suggest": {
+        "munkie/elasticsearch-thrift-php": "Needed for thrift transport"
+    }
 }
