--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
     ],
     "require": {
         "php": ">=5.4.10",
-        "symfony/event-dispatcher": "~2.1",
-        "psr/log": "~1.0",
-        "guzzlehttp/guzzle": "~4.0"
+        "symfony/event-dispatcher": "~2.4",
+        "psr/log": "~1.0"
+
     },
     "require-dev": {
         "phpunit/phpunit": "~4.1",
@@ -31,6 +31,7 @@
         "theseer/phpdox": "~0.6",
         "mayflower/php-codebrowser": "~1.1",
         "munkie/elasticsearch-thrift-php": "~1.4",
+        "guzzlehttp/guzzle": "~4.0",
         "phpspec/prophecy-phpunit": "~1.0"
     },
     "autoload": {
@@ -49,6 +50,7 @@
     "minimum-stability": "stable",
 
     "suggest": {
-        "munkie/elasticsearch-thrift-php": "Needed for thrift transport"
+        "munkie/elasticsearch-thrift-php": "Needed for thrift transport",
+        "guzzlehttp/guzzle": "Needed for HttpGuzzle transport"
     }
 }
