--- a/composer.json
+++ b/composer.json
@@ -19,20 +19,12 @@
         "php": ">=5.4.10",
         "symfony/event-dispatcher": "~2.4",
         "psr/log": "~1.0"
-
     },
     "require-dev": {
         "phpunit/phpunit": "~4.1",
-        "squizlabs/php_codesniffer": "~2.0.0RC1",
-        "phploc/phploc": "~2.0",
-        "pdepend/pdepend" : "~1.1",
-        "phpmd/phpmd" : "~1.4",
-        "sebastian/phpcpd": "~2.0",
-        "theseer/phpdox": "~0.6",
-        "mayflower/php-codebrowser": "~1.1",
+        "phpspec/prophecy-phpunit": "~1.0",
         "munkie/elasticsearch-thrift-php": "~1.4",
-        "guzzlehttp/guzzle": "~4.0",
-        "phpspec/prophecy-phpunit": "~1.0"
+        "guzzlehttp/guzzle": "~4.0"
     },
     "autoload": {
         "psr-4": { "Dawen\\Component\\Elastic\\": "src/" }
