--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "phpunit/phpunit": "~4.1",
         "phpspec/prophecy-phpunit": "~1.0",
         "munkie/elasticsearch-thrift-php": "~1.4",
-        "guzzlehttp/guzzle": "~4.0"
+        "guzzlehttp/guzzle": "~4.0",
+        "jms/serializer": "~0.15"
     },
     "autoload": {
         "psr-4": { "Elastification\\Client\\": "src/" }
