--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -8,7 +8,7 @@ filter:
 build:
     dependencies:
         before:
-            - '/usr/share/elasticsearch/bin/plugin -install elasticsearch/elasticsearch-transport-thrift/2.3.0'
+            - 'sudo /usr/share/elasticsearch/bin/plugin -install elasticsearch/elasticsearch-transport-thrift/2.3.0'
     environment:
         php: '5.4.28'
         elasticsearch: true
