Added thrift transport factory integration test to test suite.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,6 +15,7 @@
         <testsuite name="Elastification PHP-Client Testsuite">
             <!--enable unit test-->
             <directory>./tests/Unit</directory>
+            <directory>./tests/Integration/Transport/Thrift</directory>
         </testsuite>
     </testsuites>
 
