--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "source": "https://github.com/elastification/php-client/tree/master"
     },
     "require": {
-        "php": ">=5.4.10"
+        "php": ">=5.4.10",
+        "psr/log": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.1",
