--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "require-dev": {
         "phpunit/phpunit": "~4.1",
         "munkie/elasticsearch-thrift-php": "~1.4",
-        "guzzlehttp/guzzle": "~4.2",
+        "guzzlehttp/guzzle": ">=6.0,<7.0",
         "jms/serializer": "~0.15"
     },
     "autoload": {
