--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ before_script:
 php:
   - '5.5'
   - '5.6'
-  - '7.0'
   - hhvm
+#- '7.0' # Don't use php 7 until you know how to enable ext-json in travis -.-
 
 script: bin/phpunit --coverage-clover=coverage.clover
 
